Agrego enpoint para buscar propuestas