@@ -1,5 +1,8 @@
 package app.repositories.impl;
 
+import app.dto.PropuestaDto;
+import app.dto.filtros.PropuestasFiltro;
+import app.dto.propuesta.PropuestasDto;
 import app.exceptions.NotFoundException;
 import app.model.entities.Coleccion;
 import app.model.entities.Propuesta;
@@ -17,17 +20,49 @@ public class RepositorioPropuestasEnMemoria implements RepositorioPropuestas {
     private final Map<String, Propuesta> storage = new HashMap<>();
 
     @Override
-    public List<Propuesta> buscarPorAutorId(String userId) {
-        return storage.values().stream()
-                .filter(p -> p.getAutor().getId().equals(userId))
-                .collect(Collectors.toList());
+    public PropuestasDto buscarPorAutorId(String userId, PropuestasFiltro filtros) {
+        List<Propuesta> propuestas = storage.values().stream()
+                .filter(p -> p.getAutor().getUsuario().getId().equals(userId))
+                .toList();
+
+        int resultados = propuestas.size();
+
+        int paginaActual = filtros.pagina();
+        int limite = filtros.limite();
+        int offset = (paginaActual - 1) * limite;
+
+        List<PropuestaDto> data = propuestas.stream()
+            .skip(offset)
+            .limit(limite)
+            .map(PropuestaDto::new)
+            .toList();
+
+        int paginasTotales = (resultados + filtros.limite() - 1) / filtros.limite();
+
+        return new PropuestasDto(data, resultados, paginaActual, paginasTotales);
     }
 
     @Override
-    public List<Propuesta> buscarPorDestinatarioId(String userId) {
-        return storage.values().stream()
-                .filter(p -> p.getDestinatario().getId().equals(userId))
-                .collect(Collectors.toList());
+    public PropuestasDto buscarPorDestinatarioId(String userId, PropuestasFiltro filtros) {
+        List<Propuesta> propuestas =  storage.values().stream()
+                .filter(p -> p.getDestinatario().getUsuario().getId().equals(userId))
+                .toList();
+
+        int resultados = propuestas.size();
+
+        int paginaActual = filtros.pagina();
+        int limite = filtros.limite();
+        int offset = (paginaActual - 1) * limite;
+
+        List<PropuestaDto> data = propuestas.stream()
+            .skip(offset)
+            .limit(limite)
+            .map(PropuestaDto::new)
+            .toList();
+
+        int paginasTotales = (resultados + filtros.limite() - 1) / filtros.limite();
+
+        return new PropuestasDto(data, resultados, paginaActual, paginasTotales);
     }
 
     @Override
